WebCore: Parse system colors in the HTML5 canvas context. https://bugs.webkit.org/show_bug.cgi?id=39168

Reviewed by Andreas Kling.

Test: fast/css/test-setting-canvas-color.html

Based on previous work by Jan Erik Hanssen  <jhanssen@codeaurora.org>

* css/CSSParser.cpp:
(WebCore::CSSParser::parseColor): Changed the function to better match our
early return policy. Also we now return false when we don't parse the color.
This is needed for createFromString to fallback to using parseSystemColor.

(WebCore::CSSParser::parseSystemColor): Made use of the RenderTheme to get
the system colors.

* css/CSSParser.h: Added the new parseSystemColor method.

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::setStrokeColor): Pass the document to createFromString.
(WebCore::CanvasRenderingContext2D::setFillColor): Ditto.
* html/canvas/CanvasStyle.cpp:
(WebCore::CanvasStyle::createFromString): Try to parse the color using CSSParser::parseColor
and fall back to parseSystemColor if it did not work.

* html/canvas/CanvasStyle.h: Added the new Document* parameter to createFromString.

LayoutTests: Test for: Parse system colors in the HTML5 canvas context.
https://bugs.webkit.org/show_bug.cgi?id=39168

Reviewed by Andreas Kling.

This tests that svg color, deprecated system color and different
type of colors and invalid inputs are still parsed as such.

* fast/css/test-setting-canvas-color-expected.txt: Added.
* fast/css/test-setting-canvas-color.html: Added.
* platform/mac/Skipped:
* platform/qt/Skipped:



Canonical link: https://commits.webkit.org/58295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67570 268f45cc-cd09-0410-ab3c-d52691b4dbfc